package sample.FXML_Pages;

public class AlarmsPage {
}
